$Id$



2003/10/19 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- minor fixes


2003-10-18  Christian Stimming  <stimming@tuhh.de>

	* Makefile.cvs: Add calling libtoolize.


2003/10/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- MsgEngine:
  - fixed a bug concerning escaping
  - MsgEngine now searches for the highest trustLevel


2003/10/12 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a whole bunch of bugs
- MessageEngine is now able to list all GROUPS and ELEMents which belong to
  a given message. This allows for tools that show the variables needed/set
  by different messages (as needed by OpenHBCI).


2003/10/07 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- db module is now able to write a configuration (except binary data)
- fixed some bugs


2003/09/24 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- many, many fixes, improved DB module etc
- added gwenhywfar-config and gwenhywfar.m4


2003/09/23 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- completed simple IPC protocol. Now a client can connect to a server
  using a simple greeting exchange. Later the exchange of public and
  session keys will be implemented as well.
  For now I will not use encryption, this will be implemented as soon as
  the rest works.
- added a test routine to gwentest which allows connecting to another
  gwentest which works as a server.
- added a version header file


2003/09/22 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- more work on IPC: Receiving messages and parsing them using msgEngine
  works ;-) I will have to concentrate on creating a test function for
  opening a connection to test writing of messages.


2003/09/21 Martin Preuss <martin@libchipcard.de>